# Demo_openHands

./: .env.example  .gitignore  AUTONOMOUS_DEV_AGENT_REPORT.md  README.md  agent.sh  app.py  calculator.py  conftest.py  crud.py  database.py  extensions.py  init_db.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  seed.py  tatus  test.db  test_app.py  test_auth.py  test_calculator.py
agent/: __init__.py  acceptance_validator.py  architecture_agent.py  code_agent.py  config.py  error_agent.py  github_agent.py  impact_analyzer.py  intent_classifier.py  jira_agent.py  learning_system.py  openhands_agent.py  openhands_runtime.py  orchestrator.py  phase_contracts.py  planning_agent.py  prompt_builder.py  repo_agent.py  repo_indexer.py  requirement_agent.py  review_agent.py  solution_designer.py  static_validation.py  task_classifier.py  testing_agent.py
agent_mcp/: __init__.py  server.py
app/: __init__.py  __main__.py  main.py
cli/: __init__.py  main.py
instance/: blog.db  employees.db  example.db  expense_tracker.db  expenses.db  library.db  tasks.db  todos.db
local_mcp_server/: __init__.py  server.py
mcp/: __init__.py  server.py
sandbox/: Dockerfile  docker-compose.yml
static/: .keep
static/css/: style.css
templates/: .keep  404.html  add_employee.html  add_expense.html  base.html  books.html  dashboard.html  edit_employee.html  employees.html  expenses.html  home.html  index.html  login.html  register.html  stats.html
tests/: __init__.py  test_agents.py  test_app.py  test_auth.py  test_expenses.py  test_phase_agents.py  test_tags.py
(+6 files in other folders)
